# matrix-project-cpp

./: .gitignore  CMakeLists.txt  MyFunctioin.cpp  MyFunction.h  firstProject.vcxproj  firstProject.vcxproj.filters  main.cpp  matrix.cpp  matrix.h  menuLab2.cpp  menuLab_1.cpp  menuLab_3.cpp  menuLab_3.h  subMenuLab1.cpp
include/: Header.h  MyFunction.h  menuLab2.h  menuLab_1.h  menuLab_3.h
src/: MyFunctioin.cpp  main.cpp  matrix.cpp  menuLab2.cpp  menuLab_1.cpp  menuLab_3.cpp
x64/Debug/: firstProject.exe.recipe  menulab_1.obj.enc  menulab_3.obj.enc  vc143.idb
x64/Debug/firstProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  firstProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
